WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308419
[Swift in WebKit] Address swift-format linting errors in WebGPU
https://bugs.webkit.org/show_bug.cgi?id=308419
Summary
[Swift in WebKit] Address swift-format linting errors in WebGPU
Richard Robinson
Reported
2026-02-21 22:55:01 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-21 22:55:09 PST
<
rdar://problem/170907558
>
Richard Robinson
Comment 2
2026-02-21 22:56:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59195
EWS
Comment 3
2026-02-23 18:55:47 PST
Committed
308094@main
(84d8d7e6cf67): <
https://commits.webkit.org/308094@main
> Reviewed commits have been landed. Closing PR #59195 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug