[Swift in WebKit] Address swift-format linting errors in WebGPU https://bugs.webkit.org/show_bug.cgi?id=308419 rdar://170907558

Reviewed by Mike Wyrzykowski.

This fixes the 57 remaining linter errors found in WebGPU, including 47 instances of `NeverForceUnwrap`,
and also makes some minor formatting clean-ups.

* Source/WebGPU/WebGPU/Buffer.swift:
* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.swift:
(WebGPU.finish(_:)):
(WebGPU.clearTextureIfNeeded(_:slice:)):
(WebGPU.sourceSize):
(WebGPU.refersToAllAspects(_:aspect:)):
(WebGPU.loadAction(_:)):
(WebGPU.storeAction(_:hasResolveTarget:)):
(WebGPU.beginRenderPass(_:)):
(WebGPU.hasValidDimensions(_:width:height:depth:)):
(WebGPU.copyTextureToBuffer(_:destination:copySize:)):
(WebGPU.copyBufferToTexture(_:destination:copySize:)):
(WebGPU.clearBuffer(_:offset:size:)):
(WebGPU.copyTextureToTexture(_:destination:copySize:)):
(WebGPU.beginComputePass(_:)):
(WebGPU.sourceBytesPerRow): Deleted.
(WebGPU.didOverflow): Deleted.
(WebGPU.checkedBytesPerImage): Deleted.
* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Queue.swift:
* Source/WebGPU/WebGPU/StdLibExtras.swift:

Canonical link: https://commits.webkit.org/308094@main